# GameEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/GLFW/: glfw3.h
include/glad/: glad.h
lib/GLFW/: glfw3.lib
shaders/: fragment_shader.frag  vertex_shader.vert
src/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  ExampleGameLogic.cpp  ExampleGameLogic.h  FileManager.cpp  FileManager.h  GameLogic.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  MathUtils.h  OpenGLUtils.h  Render.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadersManager.cpp  ShadersManager.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
src/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  FileManager.h  GLFWWatcher.cpp  GLFWWatcher.h  IdContainer.h  Input.cpp  Input.h  InputEnums.cpp  InputEnums.h  MathUtils.h
src/core/events/: Event.h  EventSystem.cpp  EventSystem.h  InputEvents.h  WindowEvents.h
src/engine/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  GLFWWatcher.cpp  GLFWWatcher.h  IdContainer.h  Input.cpp  Input.h  InputEnums.h  Object.cpp  Object.h  Random.cpp  Random.h  SharedPtr.h
src/engine/core/events/: Event.h  InputEvents.h
src/engine/mesh/: Mesh.cpp  Mesh.h  ObjMeshLoader.cpp  ObjMeshLoader.h
src/engine/nodes/: Node.cpp  Node.h  Scene.h
src/engine/render/: IndexBuffer.cpp  IndexBuffer.h  OpenGLUtils.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/engine/utils/: StringUtils.h  VectorUtils.h
src/glad/: glad.c
src/render/: Renderer.cpp  Renderer.h  Shader.h  VertexBuffer.h  VertexBufferLayout.cpp
